fix id-blockchain6 layout broken in win chrome

--- a/src/global.css
+++ b/src/global.css
@@ -32,6 +32,7 @@
 .post {
   padding-top: 1.5rem;
   padding-bottom: 2rem;
+  max-width: 760px;
 }
 .post h1,
 .post h2,
